[front] fix nz dropdown alignements

--- a/angular/src/app/ui/components/ui-nested-dropdown/ui-nested-dropdown.component.scss
+++ b/angular/src/app/ui/components/ui-nested-dropdown/ui-nested-dropdown.component.scss
@@ -19,7 +19,7 @@
   }
 }
 
-.icon {
+.icon-with-text {
   margin-right: 4px;
 }
 
